correciÃon de header

--- a/css/main.css
+++ b/css/main.css
@@ -308,6 +308,14 @@ box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 margin-bottom: 15px;
 }
 
+.deleteWindow{
+    display: flex;
+    text-align: right;
+    justify-content: right;
+    padding-right: 40px;
+
+}
+
 
 /* <!-- Start Cart Section --> */
 
